--- a/build
+++ b/build
@@ -60,9 +60,15 @@ if not arguments.no_manim:
         if os.path.exists(video_directory):
             shutil.rmtree(video_directory)
 
-        subprocess.Popen(["python3", "-m", "manim", "scenes.py", f"-aq{arguments.quality}", "--disable_caching"]).communicate()
+        process = subprocess.Popen(["python3", "-m", "manim", "scenes.py", f"-aq{arguments.quality}", "--disable_caching"])
     else:
-        subprocess.Popen(["python3", "-m", "manim", "scenes.py", f"-q{arguments.quality}", "--disable_caching", arguments.scene]).communicate()
+        process = subprocess.Popen(["python3", "-m", "manim", "scenes.py", f"-q{arguments.quality}", "--disable_caching", arguments.scene])
+
+    result = process.communicate()
+
+    if process.returncode != 0:
+        print(f"\nBuild failed with exit code {process.returncode}")
+        quit()
 
 # (possibly) normalize audio
 if not arguments.no_sound_normalization:
