--- a/build
+++ b/build
@@ -131,30 +131,11 @@ for scene in os.listdir(video_directory):
                 for i, video in enumerate(f.read().splitlines()[1:]):
                     path, name = os.path.split(video[11:-1])
 
-                    video_folder = "vid"
-                    image_folder = "img"
-
-                    if not os.path.exists(os.path.join(path, video_folder)):
-                        os.mkdir(os.path.join(path, video_folder))
-
-                    if not os.path.exists(os.path.join(path, image_folder)):
-                        os.mkdir(os.path.join(path, image_folder))
-
                     ext = os.path.splitext(name)[1][1:]
 
                     original_path = os.path.join(path, name)
-                    changed_path = os.path.join(path, "vid", f"{i+1}.{ext}")
-                    image_path = os.path.join(path, "img", f"{i+1}.png")
-                    video_from_image_path = os.path.join(path, "img", f"{i+1}.{ext}")
+                    changed_path = os.path.join(path, f"{i+1}.{ext}")
 
                     os.rename(original_path, changed_path)
-
-                    t = 10
-
-                    # save the last frame from each video
-                    subprocess.Popen(["ffmpeg", "-i",  changed_path, "-vf", 'select=eq(n\,0)', "-vframes", "1", "-y", image_path]).communicate()
-                    subprocess.Popen(["ffmpeg", "-loop", "1", "-i", image_path, "-c:v", "libx264", "-t", "5", "-pix_fmt", "yuv420p", video_from_image_path]).communicate()
-
-                    os.remove(image_path)
 
             os.remove(partial_file_path)
