--- a/build
+++ b/build
@@ -15,8 +15,9 @@ video_directory = "video"
 parser = argparse.ArgumentParser()
 
 parser.add_argument(
-    "-s", "--scene",
-    help="the name of the scene to build; builds all when omitted",
+    "-s", "--scenes",
+    nargs='*',
+    help="the name of the scenes to build; builds all when omitted",
     default=None,
 )
 
@@ -70,7 +71,7 @@ with open("scenes.py", "r") as f:
         if match := re.match(r"\s*class\s+(.+?)\(.*Scene\)\s*:", line):
             scenes.append(match.group(1))
 
-if arguments.scene is None:
+if arguments.scenes is None or len(arguments.scenes) == 0:
     # remove everything when no scene is specified
     if os.path.exists(video_directory):
         shutil.rmtree(video_directory)
@@ -81,17 +82,18 @@ if arguments.scene is None:
 
         render_scene(scene)
 else:
-    # remove only the scene and its folders when the scene is specified
-    scene_folder = os.path.join(video_directory, arguments.scene)
-    if os.path.exists(scene_folder):
-        shutil.rmtree(scene_folder)
+    for scene in arguments.scenes:
+        # remove only the scene and its folders when the scene is specified
+        scene_folder = os.path.join(video_directory, scene)
+        if os.path.exists(scene_folder):
+            shutil.rmtree(scene_folder)
 
-    for ext in ["mp4", "mov"]:
-        scene_video = os.path.join(video_directory, arguments.scene + f".{ext}")
-        if os.path.exists(scene_video):
-            os.remove(scene_video)
+        for ext in ["mp4", "mov"]:
+            scene_video = os.path.join(video_directory, scene + f".{ext}")
+            if os.path.exists(scene_video):
+                os.remove(scene_video)
 
-    render_scene(arguments.scene)
+        render_scene(scene)
 
 
 # rename to [1..n].whatever
